fix error management
